[package]
name = "aoc2023-rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
regex = "1.10.2"
lazy_static = "1.4.0"
maplit = "1.0"
petgraph = "0.6.4"
evalexpr = "11.3.0"
num = "0.4.1"
